# par-code

./: .editorconfig  .gitignore  AGENTS.md  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dune-project  par_code.opam
.github/workflows/: ci.yml  release.yml
docs/: DECISIONS.md  STRATEGY.md
lib/: dune  par_code.ml  par_code_checkpoint.ml  par_code_checkpoint.mli  par_code_config.ml  par_code_context.ml  par_code_context.mli  par_code_extractor.ml  par_code_memory.ml  par_code_memory.mli  par_code_memory_tools.ml  par_code_repl.ml  par_code_setup.ml  par_code_ui.ml  par_code_ui.mli  par_code_ui_markdown.ml  par_code_ui_markdown.mli  par_code_upgrade.ml  par_code_upgrade.mli
scripts/: build-macos.sh  checksums.sh  commit-v0.2.1.sh  install.sh  sqlite-amalgamation.version
scripts/docker/: linux-bundle.Dockerfile
test/: dune  test_par_code.ml  test_par_code_checkpoint.ml  test_par_code_config.ml  test_par_code_memory.ml  test_par_code_repl.ml  test_par_code_ui.ml  test_par_code_ui_markdown.ml
